--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -1,10 +1,12 @@
 name: Tests and Coverage
+
 on:
   push:
     branches: ['testing']
   pull_request:
-    branches: ['main', 'master', 'testing']
+    branches: ['main', 'master']
   workflow_dispatch:
+
 jobs:
   tests:
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
@@ -12,6 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version:
+          - '3.13'
           - '3.12'
           - '3.11'
           - '3.9'
@@ -27,11 +30,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade coverage
           python -m pip install --upgrade tremolo
+
       - name: Lint
         run: |
           python -m pip install --upgrade bandit
@@ -39,15 +44,18 @@ jobs:
           python -m pip install --upgrade flake8
           python -m flake8 .
         if: ${{ matrix.os == 'ubuntu-20.04' && matrix.python-version == '3.12' }}
+
       - name: Run tests
         run: python -m tests
         if: ${{ matrix.python-version != '3.12' }}
+
       - name: Run tests with coverage
         run: |
           python -m coverage run -m tests
           python -m coverage combine
           mkdir artifact && mv .coverage artifact/.coverage.${{ matrix.os }}
         if: ${{ matrix.python-version == '3.12' && !startsWith(matrix.os, 'windows-') }}
+
       - name: Run tests with coverage on Windows
         run: |
           python -m coverage run -m tests
@@ -55,6 +63,7 @@ jobs:
           mkdir artifact && move .coverage artifact\.coverage.windows
         shell: cmd
         if: ${{ matrix.python-version == '3.12' && startsWith(matrix.os, 'windows-') }}
+
       - uses: actions/upload-artifact@v3
         with:
           path: artifact
@@ -73,12 +82,14 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade coverage
           python -m pip install --upgrade tremolo
+
       - uses: actions/download-artifact@v3
       - name: Combine and view report
         run: |
           python -m coverage combine artifact
           python -m coverage report --show-missing --skip-covered
           python -m coverage xml
+
       - uses: sonarsource/sonarcloud-github-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # needed to get PR information, if any
