--- a/.github/workflows/tests_and_coverage.yml
+++ b/.github/workflows/tests_and_coverage.yml
@@ -22,9 +22,6 @@ jobs:
           - '3.7'
           - 'pypy3.11'
         os: ['ubuntu-22.04', 'windows-latest']
-        include:
-          - os: macos-latest
-            python_version: '3.14'
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
@@ -131,6 +128,9 @@ jobs:
             github.event_name != 'pull_request' ||
             github.event.pull_request.head.repo.full_name == github.repository
           )
+
+      - run: |
+          tree -L 2
 
       - name: Combine and view report
         run: |
